<resources>
    <string name="app_name">Login MFA</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mfa_code">MFA Code</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="txt_password">Password</string>
    <string name="qr_code_for_mfa">QR code for MFA</string>
    <string name="register">Register</string>
    <string name="txt_username">Username</string>
</resources>